theme colors changed

--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -1,8 +1,10 @@
 :root{
     --main-bg-color: #333333;
-    --nav-main-text-color:#cccccc;
-    --nav-sub-text-color:#bbbbbb;
-    --nav-hover-color: #222222;
+    --main-text-color: #98A6AD;
+    --sub-text-color: #6C757D;
+    --sidenav-main-text-color: #ffffff;
+    --sidenav-sub-text-color: #CEDCE4;
+    --footer-bg-color: #333333;
 }
 
 /* ScrollBar */
@@ -28,8 +30,8 @@
   
 /* CSS of common/footer */
 .footer{
-    background-color: var(--main-bg-color);
-    color: var(--nav-main-text-color);
+    background-color: var(--footer-bg-color);
+    color: var(--main-text-color);
     font-size: 80%
 }
 
@@ -47,7 +49,7 @@
 
 .sidenav li a{
     text-decoration: none;
-    color: var(--nav-sub-text-color)
+    color: var(--nav-sub-text-color);
 }
 
 .sidenav li.main-menu{
@@ -55,7 +57,7 @@
     padding-bottom: 5%;
     padding-left: 10%;
     font-size: 18px;
-    color: var(--nav-main-text-color);
+    color: var(--sidenav-sub-text-color);
     display: flex;
     align-items: center;
 }
@@ -66,7 +68,7 @@
 }
 
 .sidenav li.main-menu:hover{
-    background-color: var(--nav-hover-color);
+    color: var(--sidenav-main-text-color);
 }
 
 .sidenav .main-menu .la{
@@ -79,7 +81,7 @@
     padding-bottom: 5%;
     padding-left: 20%;
     font-size: 16px;
-    color: var(--nav-main-text-color);
+    color: var(--sidenav-sub-text-color);
 }
 
 .sidenav li.sub-menu a{
@@ -88,7 +90,7 @@
 }
 
 .sidenav li.sub-menu:hover{
-    background-color: var(--nav-hover-color);
+    color: var(--sidenav-main-text-color);
 }
 
 .sidenav .sub-menu .la{
@@ -98,7 +100,7 @@
 
 /* CSS of home/index */
 .home .left-pane{
-    background-color: var(--main-bg-color);
+    background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
     height: 100vh;
     padding: 0%;
     overflow-y: auto;
@@ -116,7 +118,7 @@
 
 /* CSS of login/index */
 .login{
-    background-image: linear-gradient(#5555ff,#ff88ff);
+    background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
     display: flex;
     align-items: center;
     flex-direction: column; 
