--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -75,6 +75,10 @@
     font-size: 30px;
 }
 
+.sidenav #dashboard{
+    background-color: rgba(255,255,255,0.1)
+}
+
 .sidenav li.sub-menu{
    
     padding-top: 5%;
