--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -1,10 +1,32 @@
+/* site */
 :root{
-    --main-bg-color: #333333;
-    --main-text-color: #98A6AD;
-    --sub-text-color: #6C757D;
+    --main-theme-color: #727cf5;
+    --main-bg-color: #f3f3f5;
+    --main-text-color: #2672b5;
+    --sub-text-color: #98a6ad;
     --sidenav-main-text-color: #ffffff;
     --sidenav-sub-text-color: #CEDCE4;
     --footer-bg-color: #333333;
+}
+
+body{
+    cursor: default;
+}
+
+.home .stuadd{
+    background-color: var(--main-bg-color);
+}
+
+.btn-outline-primary{
+    color: var(--main-theme-color);
+    background-color: var(--white);
+    border-color: var(--main-theme-color);
+}
+
+.btn-outline-secondary{
+    color:#6c757d;
+    background-color: var(--white);
+    border-color: #6c757d;
 }
 
 /* ScrollBar */
@@ -14,29 +36,29 @@
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+    background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
   }
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #888; 
+    background: #8f75da; 
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+    background: #ddd; 
   }
 
-  
-/* CSS of common/footer */
+/* common  */
+/* common/footer */
 .footer{
     background-color: var(--footer-bg-color);
-    color: var(--main-text-color);
+    color: var(--sub-text-color);
     font-size: 80%
 }
 
 
-/* CSS of common/sidenav */
+/* common/sidenav */
 .sidenav{
     padding-left: 0%;
     margin: 0%;
@@ -102,17 +124,17 @@
 }
 
 
-/* CSS of home/index */
+/* home/index */
 .home .left-pane{
     background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
-    height: 100vh;
+    height: 100vmin;
     padding: 0%;
     overflow-y: auto;
     overflow-x: hidden;
 }
 
 .home .left-pane .logo{
-    height: 15vh;
+    height: 25vh;
 }
 
 .home .content{
@@ -120,7 +142,7 @@
 }
 
 
-/* CSS of login/index */
+/* login/index */
 .login{
     background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
     display: flex;
@@ -132,21 +154,28 @@
 }
 
 .login h1{
-    color: #ffffff;
+    color: var(--white);
     
 }
 
 .login h2{
-    color: #cccccc;
+    color: var(--sub-text-color);
 }
 
+/* student */
+/* student/index */
 
+/* student/add */
+.stuadd form{
+    display: contents;
+}
+ 
+.stuadd .card .card-header{
+    cursor: pointer;
+    color: var(--main-text-color);
+    border-radius: .25rem;
+}
 
-
-
-
-
-  
-  
-  
-  
+.stuadd .form-control {
+    color:var(--sub-text-color);
+}
