--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -13,7 +13,8 @@ body{
     cursor: default;
 }
 
-.home .stuadd{
+.content{
+    overflow-y: auto;
     background-color: var(--main-bg-color);
 }
 
@@ -59,6 +60,29 @@ body{
 
 
 /* common/sidenav */
+.left-pane{
+    background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
+    height: 100vmin;
+    padding: 0%;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.left-pane .logo{
+    height: 25vh;
+    text-align: center;
+}
+
+.left-pane .logo .sidenavusername{
+    color: var(--white);
+    /* background-color: var(--white); */
+}
+
+.left-pane .logo .sidenavuserhr{
+    color: var(--footer-bg-color);
+    width: 90%;
+}
+
 .sidenav{
     padding-left: 0%;
     margin: 0%;
@@ -122,25 +146,6 @@ body{
 .sidenav .sub-menu .la{
     font-size: 20px;
 }
-
-
-/* home/index */
-.home .left-pane{
-    background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
-    height: 100vmin;
-    padding: 0%;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
-.home .left-pane .logo{
-    height: 25vh;
-}
-
-.home .content{
-    overflow-y: auto;
-}
-
 
 /* login/index */
 .login{
