--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -24,10 +24,18 @@ body{
     border-color: var(--main-theme-color);
 }
 
+.btn-outline-primary:hover{
+    color: var(--white);
+    background-color: var(--main-theme-color);
+    border-color: var(--main-theme-color);
+}
+
 .btn-outline-secondary{
-    color:#6c757d;
     background-color: var(--white);
-    border-color: #6c757d;
+}
+
+.btn-outline-danger{
+    background-color: var(--white);
 }
 
 /* ScrollBar */
@@ -62,7 +70,7 @@ body{
 /* common/sidenav */
 .left-pane{
     background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
-    height: 100vmin;
+    height: 100vh;
     padding: 0%;
     overflow-y: auto;
     overflow-x: hidden;
@@ -171,16 +179,84 @@ body{
 /* student/index */
 
 /* student/add */
+.stuadd{
+    padding: 5% 15% 0% 15%;
+}
+
 .stuadd form{
     display: contents;
+}
+
+.stuadd .card{
+    margin-bottom: 2%;
 }
  
 .stuadd .card .card-header{
     cursor: pointer;
-    color: var(--main-text-color);
+    color: var(--main-theme-color);
     border-radius: .25rem;
 }
 
 .stuadd .form-control {
     color:var(--sub-text-color);
+}
+
+/* student/search */
+.stusearch{
+    padding: 5% 15% 0% 15%;
+}
+
+.stusearchfilter{
+    background-color: var(--white);
+    padding: 5%;
+}
+
+.stusearch .form-group{
+    color: var(--main-theme-color);
+}
+
+/* teacher */
+/* teacher/add */
+.teacheradd{
+    padding: 5% 15% 5% 15%;
+}
+
+.teacheradd form{
+    display: contents;
+}
+
+.teacheradd .card{
+    margin-bottom: 2%;
+}
+ 
+.teacheradd .card .card-header{
+    cursor: pointer;
+    color: var(--main-theme-color);
+    border-radius: .25rem;
+}
+
+.teacheradd .form-control {
+    color:var(--sub-text-color);
+}
+
+/* user */
+/* user/add */
+.useradd{
+    padding: 5% 15% 5% 15%;
+}
+
+.useraddpanel{
+    background-color: var(--white);
+    color: var(--main-theme-color);
+    text-align: center;
+}
+
+.usercreateheading{
+    color: var(--white);
+    background-color: var(--main-theme-color);
+    padding: 5%;
+}
+
+.usercreatebody{
+    padding: 4% 10% 4% 10%;
 }
