--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -250,27 +250,27 @@ body{
     color: var(--main-theme-color);
 }
 
-/* teacher */
-/* teacher/add */
-.teacheradd{
+/* staff */
+/* staff/add */
+.staffadd{
     padding: 5% 15% 5% 15%;
 }
 
-.teacheradd form{
+.staffadd form{
     display: contents;
 }
 
-.teacheradd .card{
+.staffadd .card{
     margin-bottom: 2%;
 }
  
-.teacheradd .card .card-header{
+.staffadd .card .card-header{
     cursor: pointer;
     color: var(--main-theme-color);
     border-radius: .25rem;
 }
 
-.teacheradd .form-control {
+.staffadd .form-control {
     color:var(--sub-text-color);
 }
 
@@ -299,4 +299,31 @@ body{
 
 .usercreatebody input{
    text-align: center;
+}
+
+/* user/search */
+.usersearch{
+    padding: 5% 20% 5% 20%;
+}
+
+.usersearch .usersearchfilter{
+    background-color: var(--white);
+    padding: 5%;
+    border: 2px solid var(--sub-text-color);
+    text-align: center;
+}
+
+.usersearch .usersearchheading{
+    color: var(--white);
+    background-color: var(--main-theme-color);
+    padding: 2%;
+    text-align: center;
+}
+
+.usersearch .usersearchfilter input{
+    text-align: center;
+}
+
+.usersearch .form-group{
+    color: var(--main-theme-color);
 }
