--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -33,10 +33,10 @@ body{
 
 .hrsearch{
     display: block; 
-    height: 1px;
+    height: 1rem;
     border: 0; 
-    border-top: 1px solid var(--sub-theme-color);
-    margin: 4rem 0; 
+    border-top: 0.05rem solid var(--sub-theme-color);
+    margin: 2rem 0rem 2rem 0rem; 
     padding: 0;
 }
 
@@ -50,27 +50,23 @@ body{
 }
 
 .table thead th{
-    border: 0px;
+    border: 0rem;
 }
 
 /* ScrollBar */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 0.7rem;
   }
   
   /* Track */
-  ::-webkit-scrollbar-track {
-    background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
-  }
-   
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #8f75da; 
+    background: #b9b8bb94; 
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #ddd; 
+    background: rgb(167, 164, 164); 
   }
 
 
@@ -125,7 +121,7 @@ body{
     height: 7vh;
     color: var(--sub-theme-color);
     background-color: var(--white);
-    padding: 1% 0% 1% 0%;
+    padding: 1rem;
 }
 
 .topmenu .title{
@@ -189,7 +185,7 @@ body{
 }
 
 .sidenav{
-    padding: 0% 0% 10% 0%;
+    padding: 0rem 0rem 1rem 0rem;
     margin: 0%;
 }
 
@@ -247,14 +243,13 @@ body{
 }
 
 .sidenav #dashboard{
-    padding-left: 1rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding: 1rem 0rem 1rem 1rem;
     background-color: rgba(255,255,255,0.1);
 }
 
 .sidenav li.sub-menu{
-    padding: 5% 0% 5% 10%;
+    /* padding: 5% 0% 5% 10%; */
+    padding: 0.7rem 0rem 0.7rem 1rem;
     font-size: 1rem;
     color: var(--sidenav-sub-text-color);
 }
@@ -285,7 +280,7 @@ body{
 .examindex .card-header{
     color: var(--sub-theme-color);
     background-color: var(--white);
-    border: 0px;
+    border: 0rem;
     font-weight: bold;
 }
 
@@ -342,6 +337,20 @@ body{
 
 
 
+/* result */
+/* result/index */
+.resultindex{
+    padding: 1rem;
+}
+
+
+/* result/search */
+
+
+/* result/add */
+
+
+
 /* staff */
 /* staff/index */
 .staffindex{
@@ -358,7 +367,7 @@ body{
     background-color: var(--white);
     margin: 2% 10% 3% 10%;
     padding: 3% 5% 3% 5%;
-    border: 0px;
+    border: 0rem;
     text-align: center;
 }
 
@@ -407,13 +416,13 @@ body{
 }
 
 .stuindex .card{
-    border: 0px;
+    border: 0rem;
 }
 
 .stuindex .card-header{
     color: var(--sub-theme-color);
     background-color: var(--white);
-    border: 0px;
+    border: 0rem;
     font-weight: bold;
 }
 
@@ -428,7 +437,7 @@ body{
     padding: 3% 5% 3% 5%;
     background-color: var(--white);
     /* padding: 5%; */
-    border: 0px;
+    border: 0rem;
     text-align: center;
 }
 
@@ -490,13 +499,13 @@ body{
 }
 
 .userindex .card{
-    border: 0px;
+    border: 0rem;
 }
 
 .userindex .card-header{
     color: var(--sub-theme-color);
     background-color: var(--white);
-    border: 0px;
+    border: 0rem;
     font-weight: bold;
 }
 
@@ -504,20 +513,20 @@ body{
 
 /* user/search */
 .usersearch{
-    padding: 10% 20% 5% 20%;
+    padding: 10rem 20rem 5rem 20rem;
 }
 
 .usersearch .usersearchfilter{
     background-color: var(--white);
     padding: 5%;
-    border: 1px solid var(--sub-theme-color);
+    border: 0.05rem solid var(--sub-theme-color);
     text-align: center;
 }
 
 .usersearch .usersearchheading{
     color: var(--white);
     background-color: var(--sub-theme-color);
-    padding: 2%;
+    padding: 1rem;
     text-align: center;
 }
 
@@ -528,24 +537,25 @@ body{
 
 /* user/add */
 .useradd{
-    padding: 5% 20% 5% 20%;
+    padding: 5rem 20rem 5rem 20rem;
 }
 
 .useraddpanel{
     background-color: var(--white);
     color: var(--main-text-color);
     text-align: center;
-    border: 1px solid var(--sub-theme-color);
+    border: 0.05rem solid var(--sub-theme-color);
 }
 
 .usercreateheading{
     color: var(--white);
     background-color: var(--sub-theme-color);
-    padding: 2%;
+    padding: 1rem;
 }
 
 .usercreatebody{
-    padding: 4% 10% 4% 10%;
+    /* padding: 4% 10% 4% 10%; */
+    padding: 4rem 6rem 4rem 6rem;
 }
 
 .usercreatebody input{
