--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,500&display=swap');
+
 /* site */
 :root{
     --main-theme-color: #727cf5;
