--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -1,4 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,500&display=swap');
+@font-face {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Ubuntu Regular'), local('Ubuntu-Regular'), url("../fonts/ubuntu.woff2") format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
 
 /* site */
 :root{
@@ -62,6 +69,10 @@ h5.page-title{
 .table thead th{
     border: 0rem;
 }
+
+/* Bootstrap Checkbox */
+.toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20rem; }
+.toggle.ios .toggle-handle { border-radius: 20rem; }
 
 /* ScrollBar */
 ::-webkit-scrollbar {
@@ -157,7 +168,6 @@ h5.page-title{
     padding-right: 3rem;
 }
 
-
 .topmenu i{
     font-size: 2rem;
 }
@@ -197,9 +207,14 @@ h5.page-title{
     color: var(--white);
 }
 
-.left-pane .logo .sidenavuserhr{
-    color: var(--footer-bg-color);
-    width: 90%;
+.hrsidenav{
+    display: block;
+    width: 80%; 
+    height: 1rem;
+    border: 0; 
+    border-top: 0.05rem solid var(--sub-text-color);
+    margin: 2rem 0rem 2rem 0rem; 
+    padding: 0;
 }
 
 .sidenav{
